--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <section>
       <h2>Contact Us</h2>
-      <p>📍 Kuala Lumpur, Kuala Lumpur</p>
+      <p>📍  Kuala Lumpur</p>
       <p>📞 +6142844361 | ✉️ brightbear2025@gmail.com</p>
     </section>
   </main>
@@ -60,3 +60,4 @@
   </footer>
 </body>
 </html>
+
