--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <nav>
         <button class="menu-btn" aria-label="Open menu" onclick="toggleMenu()">☰</button>
         <ul aria-label="Primary navigation">
-          <li><a href="#about">About</a></li>
+          <li><a href="#about">Ab</a></li>
           <li><a href="#programs">Programmes</a></li>
           <li><a href="#why">Why Us</a></li>
           <li><a href="#gallery">Gallery</a></li>
