--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     header{position:sticky;top:0;z-index:30;background:#fff;box-shadow:0 1px 10px rgba(0,0,0,.06)}
     .nav{display:flex;align-items:center;justify-content:space-between;padding:10px 0}
     .brand{display:flex;align-items:center;gap:12px}
-    .brand img{width:46px;height:46px;object-fit:contain}
+    .brand img{width:100px;height:100px;object-fit:contain}
     .brand .title{font-weight:800;letter-spacing:.3px;color:var(--brand-2)}
     .brand .subtitle{display:block;font-size:12px;font-weight:600;color:#6b7a8c;margin-top:-6px}
     nav ul{display:flex;gap:22px;list-style:none;margin:0;padding:0}
@@ -123,7 +123,7 @@
       <nav>
         <button class="menu-btn" aria-label="Open menu" onclick="toggleMenu()">☰</button>
         <ul aria-label="Primary navigation">
-          <li><a href="#about">Ab</a></li>
+          <li><a href="#about">About</a></li>
           <li><a href="#programs">Programmes</a></li>
           <li><a href="#why">Why Us</a></li>
           <li><a href="#gallery">Gallery</a></li>
