--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
       .mobile a{display:block;padding:16px 24px;border-bottom:1px solid #f3f3f3}
       .mobile .cta{margin:12px 24px 24px}
       .mobile.open{display:block}
+
+      /* Hide mobile menu by default on desktop */
+    @media (min-width: 901px) {
+    .mobile {
+    display: none !important;
+  }
+}
+
     }
 
     /* Hero */
