--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     .container{width:min(1200px,92%);margin-inline:auto}
 
     /* Header */
-    header{position:sticky;top:0;z-index:30;background:#fff;box-shadow:0 1px 10px rgba(0,0,0,.06)}
+    header{position:sticky;top:0;z-index:30;background:var(--brand-2);color:#e8f0f7;box-shadow:0 1px 10px rgba(0,0,0,.06)}
     .nav{display:flex;align-items:center;justify-content:space-between;padding:10px 0}
     .brand{display:flex;align-items:center;gap:12px}
-    .brand img{width:150px;height:150px;object-fit:contain}
+    .brand img{width:120px;height:120px;object-fit:contain}
     .brand .title{font-weight:800;letter-spacing:.3px;color:var(--brand-2)}
     .brand .subtitle{display:block;font-size:12px;font-weight:600;color:#6b7a8c;margin-top:-6px}
     nav ul{display:flex;gap:22px;list-style:none;margin:0;padding:0}
