--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     .nav{display:flex;align-items:center;justify-content:space-between;padding:10px 0}
     .brand{display:flex;align-items:center;gap:12px}
     .brand img{width:120px;height:120px;object-fit:contain}
-    .brand .title{font-weight:800;letter-spacing:.3px;color:var(--brand-2)}
+    .brand .title{font-weight:800;letter-spacing:.3px;color:#6b7a8c}
     .brand .subtitle{display:block;font-size:12px;font-weight:600;color:#6b7a8c;margin-top:-6px}
     nav ul{display:flex;gap:22px;list-style:none;margin:0;padding:0}
     nav a{font-weight:600}
