--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     .container{width:min(1200px,92%);margin-inline:auto}
 
     /* Header */
-    header{position:sticky;top:0;z-index:30;background:#fff;box-shadow:0 1px 10px rgba(0,0,0,.06)}
+    header{position:sticky;top:0;z-index:30;background:#FFF5E9;box-shadow:0 1px 10px rgba(0,0,0,.06)}
     .nav{display:flex;align-items:center;justify-content:space-between;padding:10px 0}
     .brand{display:flex;align-items:center;gap:12px}
     .brand img{width:120px;height:120px;object-fit:contain}
