--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     header{position:sticky;top:0;z-index:30;background:#FFF5E9;box-shadow:0 1px 10px rgba(0,0,0,.06)}
     .nav{display:flex;align-items:center;justify-content:space-between;padding:10px 0}
     .brand{display:flex;align-items:center;gap:12px}
-    .brand img{width:120px;height:120px;object-fit:contain}
+    .brand img{width:130px;height:130px;object-fit:contain}
     .brand .title{font-weight:800;letter-spacing:.3px;color:var(--brand-2)}
     .brand .subtitle{display:block;font-size:12px;font-weight:600;color:#6b7a8c;margin-top:-6px}
     nav ul{display:flex;gap:22px;list-style:none;margin:0;padding:0}
@@ -149,8 +149,8 @@
   <section id="home" class="hero">
     <div class="container wrap">
       <div>
-        <span class="badge">Now enrolling — 2 to 6 years</span>
-        <h1>Warm hearts, curious minds, <span style="color:var(--accent)">ready for Primary 1</span>.</h1>
+        <span class="badge">Now enrolling — 3 to 6 years</span>
+        <h1>Warm hearts, curious minds, <span style="color:var(--accent)">ready for Primary 1</span></h1>
         <p class="lead">We blend joyful play with strong literacy & numeracy, music (piano time!), and character building — designed to meet Malaysia MoE standards.</p>
         <div class="hero-cta">
           <a class="btn primary" href="#contact">Book a School Tour</a>
@@ -176,12 +176,12 @@
       <p class="section-lead">A neighbourhood preschool with a loving team, modern classrooms, and a curriculum that grows with your child from playful discovery to Primary 1 readiness.</p>
       <div class="grid-3">
         <div class="program">
-          <span class="tag">Ages 2–3</span>
+          <span class="tag">Ages 3-4 </span>
           <h3>Early Years (Playgroup)</h3>
           <p>Sensory play, music & movement, language exposure, and social skills in a cosy, safe environment.</p>
         </div>
         <div class="program">
-          <span class="tag">Ages 4–5</span>
+          <span class="tag">Ages 5</span>
           <h3>Kindy Foundations</h3>
           <p>Thematic discovery projects, phonics, pre‑writing, Mandarin basics, and gentle maths.</p>
         </div>
@@ -246,7 +246,7 @@
         <h3 style="margin:0 0 8px">School Hours</h3>
         <p style="margin:0 0 12px">Mon–Fri • 7:30am – 6:30pm</p>
         <h3 style="margin:10px 0 8px">Locations</h3>
-        <p style="margin:0">Kuala Lumpur • Selangor</p>
+        <p style="margin:0">Kuala Lumpur • Setapak</p>
         <div style="height:12px"></div>
         <a class="btn primary" href="#contact">Ask About Availability</a>
       </div>
@@ -287,7 +287,7 @@
     <div class="container contact">
       <div>
         <h2 class="section-title">Book a Tour</h2>
-        <p class="section-lead">Tell us your child’s age and preferred campus — we’ll reply within 1 business day.</p>
+        <p class="section-lead">Tell us your child’s age and preferred campus — we’ll reply you the soonest.</p>
         <form name="contact" onsubmit="event.preventDefault(); alert('Thanks! We will get back to you shortly.'); this.reset();">
           <label for="name">Parent Name</label>
           <input id="name" name="name" required />
@@ -305,7 +305,7 @@
           <h3 style="margin:0 0 10px">Contact Us</h3>
           <p style="margin:0 0 8px">✉️ hello@brightbear.my</p>
           <p style="margin:0 0 8px">📞 +60 12‑345 6789</p>
-          <p style="margin:0">📍 Kuala Lumpur • Selangor</p>
+          <p style="margin:0">📍 Kuala Lumpur • Setapak</p>
           <div style="height:10px"></div>
           <a class="btn ghost" href="#">Download Prospectus (PDF)</a>
         </div>
