--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     header{position:sticky;top:0;z-index:30;background:#FFF5E9;box-shadow:0 1px 10px rgba(0,0,0,.06)}
     .nav{display:flex;align-items:center;justify-content:space-between;padding:10px 0}
     .brand{display:flex;align-items:center;gap:12px}
-    .brand img{width:130px;height:130px;object-fit:contain}
+    .brand img{width:140px;height:140px;object-fit:contain}
     .brand .title{font-weight:800;letter-spacing:.3px;color:var(--brand-2)}
     .brand .subtitle{display:block;font-size:12px;font-weight:600;color:#6b7a8c;margin-top:-6px}
     nav ul{display:flex;gap:22px;list-style:none;margin:0;padding:0}
@@ -303,7 +303,7 @@
       <div>
         <div class="card">
           <h3 style="margin:0 0 10px">Contact Us</h3>
-          <p style="margin:0 0 8px">✉️ hello@brightbear.my</p>
+          <p style="margin:0 0 8px">✉️ brightbear@gmail.com.my</p>
           <p style="margin:0 0 8px">📞 +60 12‑345 6789</p>
           <p style="margin:0">📍 Kuala Lumpur • Setapak</p>
           <div style="height:10px"></div>
