--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
           <p style="margin:0 0 8px">📞 +60 12‑345 6789</p>
           <p style="margin:0">📍 Kuala Lumpur • Setapak</p>
           <div style="height:10px"></div>
+          <a class="btn ghost" href="https://wa.me/60123976428" target="_blank" rel="noopener">WhatsApp Us</a>
           <a class="btn ghost" href="#">Download Prospectus (PDF)</a>
         </div>
       </div>
