--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
         <img src="https://images.unsplash.com/photo-1600607687920-4ce8c559d8df?q=80&w=1200&auto=format&fit=crop" alt="Blocks"/>
         <img src="https://images.unsplash.com/photo-1543364195-bfe6e4932397?q=80&w=1200&auto=format&fit=crop" alt="Piano"/>
         <img src="https://images.unsplash.com/photo-1504714146340-959ca07b7bbf?q=80&w=1200&auto=format&fit=crop" alt="Teamwork"/>
+        <img src="https://drive.google.com/drive/folders/1NO0oTe2zUjbVXkbDZcbla3zb_RQ-_0Zz" alt="Outdoor"/>
       </div>
     </div>
   </section>
