--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <h1>Warm hearts, curious minds, <span style="color:var(--accent)">ready for Primary 1</span></h1>
         <p class="lead">We blend joyful play with strong literacy & numeracy, music (piano time!), and character building — designed to meet Malaysia MoE standards.</p>
         <div class="hero-cta">
-          <a class="btn primary" href="tel:60123976428">Book a School Tour</a>
+          <a class="btn primary" href="tel:+60176002267">Book a School Tour</a>
           <a class="btn ghost" href="#programs">View Programmes</a>
         </div>
         <div style="margin-top:16px;display:flex;gap:10px;flex-wrap:wrap">
@@ -309,10 +309,10 @@
         <div class="card">
           <h3 style="margin:0 0 10px">Contact Us</h3>
           <p style="margin:0 0 8px">✉️ brightbear@gmail.com.my</p>
-          <p style="margin:0 0 8px">📞 +60 12‑345 6789</p>
-          <p style="margin:0">📍 Kuala Lumpur • Setapak</p>
+          <p style="margin:0 0 8px">📞 +60 17‑600 2267</p>
+          <p style="margin:0">📍 39-1， Block A, KL Traders Square, Jalan Gombak, Setapak, Kuala Lumpur</p>
           <div style="height:10px"></div>
-          <a class="btn ghost" href="https://wa.me/60123976428" target="_blank" rel="noopener">WhatsApp Us</a>
+          <a class="btn ghost" href="https://wa.me/60176002267" target="_blank" rel="noopener">WhatsApp Us</a>
           <a class="btn ghost" href="#">Download Prospectus (PDF)</a>
         </div>
       </div>
