--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         </div>
       </div>
       <div class="art">
-        <img class="card" src="https://images.unsplash.com/photo-1596464716121-d8dc7c7894bd?q=80&w=1600&auto=format&fit=crop" alt="Children learning joyfully" />
+        <img class="card" src="assets/brightbear-hero.png" alt="Bright Bear Preschool mascot" />
         <div class="shape" aria-hidden="true"></div>
       </div>
     </div>
