--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <header>
     <div class="container nav">
       <a class="brand" href="#home" aria-label="Bright Bear Preschool home">
-        <img src="assets/logo.png" alt="Bright Bear logo" />
+        <img class="logo" src="assets/logo.png" alt="Bright Bear logo" />
         <div>
           <div class="title">Bright Bear Preschool</div>
           <span class="subtitle">Learn • Play • Grow</span>
