--- a/index.html
+++ b/index.html
@@ -26,14 +26,64 @@
 
     /* Header */
     header{position:sticky;top:0;z-index:30;background:#FFF5E9;box-shadow:0 1px 10px rgba(0,0,0,.06)}
-    .nav{display:flex;align-items:center;justify-content:space-between;padding:10px 0}
-    .brand{display:flex;align-items:center;gap:12px}
-    .brand img{width:150px;height:150px;object-fit:contain}
-    .brand .title{font-weight:800;letter-spacing:.10px;color:var(--brand-2)}
-    .brand .subtitle{display:block;font-size:12px;font-weight:600;color:#6b7a8c;margin-top:-6px}
-    nav ul{display:flex;gap:22px;list-style:none;margin:0;padding:0}
-    nav a{font-weight:600}
-    .cta{background:var(--accent);color:white;padding:10px 16px;border-radius:999px;display:inline-flex;align-items:center;gap:10px;font-weight:700}
+    /* Slim header override */
+    .nav {
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      padding:6px 20px;
+      line-height:1;
+    }
+    .brand {
+      display:flex;
+      align-items:center;
+      gap:10px;
+    }
+    .brand img {
+      height:44px;   /* slim like Eduwis */
+      width:auto;
+      object-fit:contain;
+      margin:0;
+    }
+    .brand .title {
+      font-size:18px;
+      font-weight:800;
+      line-height:1.1;
+      margin:0;
+      color:var(--brand-2);
+    }
+    .brand .subtitle {
+      font-size:11px;
+      line-height:1.1;
+      margin:2px 0 0;
+      color:#6b7a8c;
+    }
+    nav ul {
+      display:flex;
+      align-items:center;
+      gap:20px;
+      list-style:none;
+      margin:0;
+      padding:0;
+      flex-wrap:nowrap;
+    }
+    nav a {
+      font-weight:600;
+      font-size:14px;
+      line-height:1;
+      padding:6px 4px;
+      white-space:nowrap;
+    }
+    .cta {
+      background:var(--accent);
+      color:#fff;
+      padding:6px 12px;
+      border-radius:999px;
+      font-weight:700;
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+    }
     .menu-btn{display:none;background:none;border:0;font-size:28px}
 
     /* Always hide mobile menu on desktop */
