--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     }
     .brand img {
       height:60px;   /* slim like Eduwis */
-      width:auto;
+      width:60px;
       object-fit:contain;
       margin:0;
     }
