--- a/index.html
+++ b/index.html
@@ -124,6 +124,18 @@
     .hero-cta{display:flex;gap:12px;flex-wrap:wrap}
     .card{background:#fff;border-radius:20px;box-shadow:0 10px 30px rgba(2,48,71,.08);padding:22px}
     .hero .art{position:relative}
+    /* ✅ Responsive mascot image */
+    .art {
+      width: 100%;
+      height: auto;
+    }
+
+    .art img {
+      width: 100%;
+      height: auto;
+      object-fit: contain;
+      display: block;
+    }
     .shape{position:absolute;inset:auto auto -40px -40px;width:160px;height:160px;background:var(--brand);filter:blur(60px);opacity:.4;z-index:-1;border-radius:50%}
 
     /* ✅ Mobile tweak */
