--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
     /* ✅ Responsive mascot image */
     .art {
       width: 100%;
-      height: auto;
+      height: 100%;
     }
 
     .art img {
       width: 100%;
-      height: auto;
-      object-fit: contain;
+      height: 100%;
+      object-fit: cover;
       display: block;
     }
     .shape{position:absolute;inset:auto auto -40px -40px;width:160px;height:160px;background:var(--brand);filter:blur(60px);opacity:.4;z-index:-1;border-radius:50%}
