--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <h1>Warm hearts, curious minds, <span style="color:var(--accent)">ready for Primary 1</span></h1>
         <p class="lead">We blend joyful play with strong literacy & numeracy, music (piano time!), and character building — designed to meet Malaysia MoE standards.</p>
         <div class="hero-cta">
-          <a class="btn primary" href="tel:+60176002267">Book a School Tour</a>
+          <a class="btn primary" href="#contact">Book a School Tour</a>
           <a class="btn ghost" href="#programs">View Programmes</a>
         </div>
         <div style="margin-top:16px;display:flex;gap:10px;flex-wrap:wrap">
