--- a/index.html
+++ b/index.html
@@ -120,14 +120,17 @@
     .hero-cta{display:flex;gap:12px;flex-wrap:wrap}
     .card{background:#fff;border-radius:20px;box-shadow:0 10px 30px rgba(2,48,71,.08);padding:22px}
     .hero .art{position:relative}
-    /* Default (desktop/tablet) */
-    .art img {
+
+    .art {
       width: 100%;
-      height: auto;
-      object-fit: contain;
+      height: 100%;
+    }
+    .art img {
+      width: 100%;          /* fill the box width */
+      height: 100%;         /* fill the box height */
+      object-fit: cover;    /* crop to cover the box fully */
       display: block;
-      max-width: 100%;   /* keeps mascot from getting too big on wide screens */
-      margin: 0 auto;     /* centers image if smaller */
+      border-radius: 12px;  /* optional: keeps rounded corners */
     }
 
     /* ✅ Mobile adjustment */
@@ -136,6 +139,7 @@
         max-width: 100%;   /* shrink mascot for mobile */
         margin-top: 100%;   /* add some breathing room below text */
         height: auto;
+        object-fit: cover
       }
     }
     .shape{position:absolute;inset:auto auto -40px -40px;width:160px;height:160px;background:var(--brand);filter:blur(60px);opacity:.4;z-index:-1;border-radius:50%}
