--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <p class="lead">We blend joyful play with strong literacy & numeracy, music (piano time!), and character building — designed to meet Malaysia MoE standards.</p>
         <div class="hero-cta">
           <a class="btn primary" href="#contact">Book a School Tour</a>
-          <a class="btn ghost" href="#programs">View Programmes</a>
+          <a class="btn primary" href="#programs">View Programmes</a>
         </div>
         <div style="margin-top:16px;display:flex;gap:10px;flex-wrap:wrap">
           <span class="chip">Small class sizes</span>
