--- a/index.html
+++ b/index.html
@@ -122,14 +122,15 @@
     .hero .art{position:relative}
 
     .art {
-      width: 100%;
-      height: 100%;
+      display: inline-block;   /* box wraps its contents */
+      width: auto;
+      height: auto;
     }
     .art img {
-      width: 100%;          /* fill the box width */
-      height: 100%;         /* fill the box height */
-      object-fit: cover;    /* crop to cover the box fully */
-      display: block;
+      width: auto;          /* use natural width */
+      height: auto;         /* use natural height */
+      object-fit: contain;    /* ensures full image is visible */
+      display: block;       /* removes inline whitespace */
       border-radius: 12px;  /* optional: keeps rounded corners */
     }
 
