--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       height: auto;         /* use natural height */
       object-fit: contain;    /* ensures full image is visible */
       display: block;       /* removes inline whitespace */
-      border-radius: 12px;  /* optional: keeps rounded corners */
+      border-radius: 0;        /* ✅ removes rounded corners */
     }
 
     /* ✅ Mobile adjustment */
