--- a/index.html
+++ b/index.html
@@ -136,11 +136,14 @@
 
     /* ✅ Mobile adjustment */
       @media (max-width: 768px) {
-      .art img {
-        max-width: 100%;   /* shrink mascot for mobile */
-        margin-top: 100%;   /* add some breathing room below text */
-        height: auto;
-        object-fit: cover
+        .art {
+          height: auto;       /* let the height shrink naturally */
+        }
+        .art img {
+        width: 100%;        /* fill screen width */
+        height: auto;       /* keep proportions */
+        object-fit: contain; /* show the full image on small screens */
+        border-radius: 0;    /* optional: remove rounding for edge-to-edge */
       }
     }
     .shape{position:absolute;inset:auto auto -40px -40px;width:160px;height:160px;background:var(--brand);filter:blur(60px);opacity:.4;z-index:-1;border-radius:50%}
