--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
       height: auto;         /* use natural height */
       object-fit: contain;    /* ensures full image is visible */
       display: block;       /* removes inline whitespace */
+      border: 0;
       border-radius: 12px;  /* optional: keeps rounded corners */
     }
 
@@ -144,8 +145,8 @@
         height: auto;       /* keep proportions */
         object-fit: contain; /* show the full image on small screens */
         border-radius: 0;    /* optional: remove rounding for edge-to-edge */
+        }
       }
-    }
     .shape{position:absolute;inset:auto auto -40px -40px;width:160px;height:160px;background:var(--brand);filter:blur(60px);opacity:.4;z-index:-1;border-radius:50%}
 
     /* Sections */
