--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@
     <div class="container">
       <h2 class="section-title">Peek Into Our Day</h2>
       <div class="gallery" aria-label="School gallery">
+        <img src="assets/Hall.jpg" alt="Hall"/>
         <img src="https://images.unsplash.com/photo-1580582932707-520aed937b7b?q=80&w=1200&auto=format&fit=crop" alt="Classroom"/>
         <img src="https://images.unsplash.com/photo-1503454537195-1dcabb73ffb9?q=80&w=1200&auto=format&fit=crop" alt="Learning corner"/>
         <img src="https://images.unsplash.com/photo-1509062522246-3755977927d7?q=80&w=1200&auto=format&fit=crop" alt="Art time"/>
